# docs/swagger.json
@@ -271,11 +271,6 @@
         },
         "/health": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Check if the API is running and healthy",
                 "consumes": [
                     "application/json"
